[package]
name = "mongo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
serde = "1.0"
dotenv = "0.15.0"
futures = "0.3.26"
bson = "2.6.0"

[dependencies.mongodb]
version = "2.4.0"
default-features = false
features = ["async-std-runtime"]